# llama.cpp-omni

./: AGENTS.md  README.md
common/: arg.cpp  common.h  sampling.cpp  sampling.h
ggml/include/: ggml-backend.h  ggml-cpu.h
ggml/src/: ggml-backend-impl.h  ggml-backend.cpp
ggml/src/ggml-cpu/: ggml-cpu.c
ggml/src/ggml-cuda/: ggml-cuda.cu  im2col.cu
ggml/src/ggml-metal/: ggml-metal-context.h  ggml-metal-context.m  ggml-metal.cpp
ggml/src/ggml-vulkan/: ggml-vulkan.cpp
ggml/src/ggml-vulkan/vulkan-shaders/: vulkan-shaders-gen.cpp
include/: llama.h
src/: llama-context.cpp  llama-context.h  llama-model.cpp
tools/omni/: CMakeLists.txt  audition.cpp  audition.h  omni-cli.cpp  omni-encode-stage.cpp  omni-encode-stage.h  omni-impl.h  omni-llm-stage.cpp  omni-llm-stage.h  omni-log.cpp  omni-log.h  omni-output.cpp  omni-output.h  omni-python-t2w.cpp  omni-python-t2w.h  omni-runtime-init.cpp  omni-runtime-init.h  omni-runtime-messages.h  omni-session-state.cpp  omni-session-state.h  omni-sliding-window.cpp  omni-sliding-window.h  omni-slo-metrics.cpp  omni-slo-metrics.h  omni-t2w-stage.cpp  omni-t2w-stage.h  omni-token-protocol.cpp  omni-token-protocol.h  omni-tts-stage.cpp  omni-tts-stage.h  omni-turn-coordinator.cpp  omni-turn-coordinator.h  omni-worker-coordinator.cpp  omni-worker-coordinator.h  omni-worker-state.h  omni.cpp  omni.h  tts-condition-graph.cpp  tts-condition-graph.h  vision.cpp  (+1 more)
tools/omni/coreml/: coreml_t2w_dit.h  coreml_t2w_dit.mm  omni_coreml.mm
tools/omni/test/: bench-llm.cpp  bench-t2w.cpp  bench-tts.cpp  bench-vision.cpp  run-all-bench.sh  run-llm-bench.sh  run-t2w-bench.sh  run-tts-bench.sh  test-duplex.cpp  test-llm-bench.cpp  test-turn-coordinator.cpp  test-vit-bench.cpp  test_t2w_ane_end2end.cpp  test_t2w_dit_ane.cpp
tools/omni/token2wav/: token2wav-example.cpp  token2wav-impl.cpp  token2wav-impl.h  token2wav-profile.h  token2wav.cpp
tools/omni/voxcpm2/: README.md  convert_voxcpm2_to_gguf.py  voxcpm2_audiovae.cpp  voxcpm2_llm.cpp  voxcpm2_llm.h  voxcpm2_runtime.cpp  voxcpm2_runtime.h  voxcpm2_transformer.cpp  voxcpm2_transformer.h
tools/server/: CMakeLists.txt  server-voxcpm2.cpp  server.cpp
